Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -309,7 +309,7 @@ Manufacturers of scanners always publish their scanners' DPI options, which help
 
 Therefore, we consulted professional user reviews, often in the form of blogs, to obtain speed estimates. We tried to find a single blog with as many measurements as possible so the values would be consistent from scanner to scanner. Thankfully, a website, ScanDig, offered reviews of many scanners currently sold and previously sold \cite{ScanDig}. However, we again encountered problems. Many scanners that met our objectives and constraints are no longer sold. For example, the Canon CanoScan 9000F Mark II scanned a single standard $35 \ \text{mm}$ in 50 seconds at 4800 DPI \cite{canoscanspeed}. As one of our shots is about 3 times wider than a standard shot, the CanoScan should take about 2.5 minutes to scan one of our shots, about 2.5 minutes faster than what the 4990 can do. However, the CanoScan was discontinued in 2019. The Epson Perfection V800 Photo was also fast but discontinued \cite{v800scandig}. Other scanners like the Epson Perfection V600 Photo have reviews on ScanDig showing slowness compared to our 4990 for their older models, but their newer models have not yet been reviewed by ScanDig \cite{v600scandig}. Moreover, other online reviews do not give any quantifiable speed test for the such scanners.
 
-The Canon CanoScan 9000F Mark II, for example, shows that significant scanning speed improvements over the 4990 are possible but may require a second hand scanner to be purchased. Ultimately, we decided not to pursue such options and instead use the 4990, due to the potential for an scanner being damaged in shipping, shipping too late for us to test it, or being faulty upon delivery due to previous use. The reel stands are compatible with any flatbed scanner, so purchasing a scanner can be done later if need be.
+The Canon CanoScan 9000F Mark II, for example, shows that significant scanning speed improvements over the 4990 are possible but may require a second hand scanner to be purchased. Ultimately, we decided not to pursue such options and instead use the 4990, due to the potential for a purchased second hand scanner to be damaged in shipping, shipping too late for us to test it, or being faulty upon delivery due to previous use. The reel stands are compatible with any flatbed scanner, so purchasing a scanner can be done later if need be.
 
 \subsubsection{Flatbed Scanners}
 Flatbed scanners are like a household printer. To operate them you lift open the scanner’s hood, place your film in a  template (also called a holder or insert) if necessary, close the hood, and scan. These types of scanners allow one to scan a variety of types of film including slides, sections of reel, and large and medium format. The large scanning surface also allows many shots to be scanned at once. Moreover, most flatbed scanners automatically crop and cut scans when a template is used, potentially saving much editing time.
